zebra-rpc/src/methods/tests/snapshot/snapshots/get_block_count@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: block_count
---
10
