zebra-rpc/src/methods/tests/snapshot/snapshots/get_block_subsidy_future_height@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: get_block_subsidy
---
{
  "fundingstreams": [
    {
      "recipient": "Electric Coin Company",
      "specification": "https://zips.z.cash/zip-0214",
      "value": 0.21875,
      "valueZat": 21875000,
      "address": "t2HxbP5keQSx7p592zWQ5bJ5GrMmGDsV2Xa"
    },
    {
      "recipient": "Zcash Foundation",
      "specification": "https://zips.z.cash/zip-0214",
      "value": 0.15625,
      "valueZat": 15625000,
      "address": "t27eWDgjFYJGVXmzrXeVjnb5J3uXDM9xH9v"
    },
    {
      "recipient": "Major Grants",
      "specification": "https://zips.z.cash/zip-0214",
      "value": 0.25,
      "valueZat": 25000000,
      "address": "t2Gvxv2uNM7hbbACjNox4H6DjByoKZ2Fa3P"
    }
  ],
  "miner": 2.5,
  "founders": 0.0
}
