zebra-rpc/src/methods/tests/snapshot/snapshots/get_block_subsidy_future_nu6_height@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: get_block_subsidy
---
{
  "fundingstreams": [
    {
      "recipient": "Major Grants",
      "specification": "https://zips.z.cash/zip-0214",
      "value": 0.125,
      "valueZat": 12500000,
      "address": "t2HifwjUj9uyxr9bknR8LFuQbc98c3vkXtu"
    }
  ],
  "lockboxstreams": [
    {
      "recipient": "Lockbox",
      "specification": "https://zips.z.cash/zip-0214",
      "value": 0.1875,
      "valueZat": 18750000
    }
  ],
  "miner": 1.25,
  "founders": 0.0,
  "fundingstreamstotal": 0.125,
  "lockboxtotal": 0.1875,
  "totalblocksubsidy": 1.5625
}
