zebra-rpc/src/methods/tests/snapshot/snapshots/get_block_template.coinbase_tx@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: coinbase_tx
---
{
  "V5": {
    "network_upgrade": "Nu5",
    "lock_time": {
      "Height": 0
    },
    "expiry_height": 1687105,
    "inputs": [
      {
        "Coinbase": {
          "height": 1687105,
          "data": [],
          "sequence": 0
        }
      }
    ],
    "outputs": [
      {
        "value": 15625000,
        "lock_script": "1cbdd45cb1adffb5215a42720532a076f02c7c778c90"
      },
      {
        "value": 21875000,
        "lock_script": "1cbd69a9f95a98fe581b6eb52841ef4806dc4402eb90"
      },
      {
        "value": 25000000,
        "lock_script": "1cbd931fec54c1fea86e574462cc32013f5400b89129"
      },
      {
        "value": 250000000,
        "lock_script": "1cbdadadadadadadadadadadadadadadadadadadadad"
      }
    ],
    "sapling_shielded_data": null,
    "orchard_shielded_data": null
  }
}
